Added to Google Analytics
Signed-off-by: Sourav Dutta <souravbpd@gmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,43 @@
     </svg>
   </a>
   <app-root></app-root>
+  <script>
+    (function (i, s, o, g, r, a, m) {
+      i['GoogleAnalyticsObject'] = r;
+      i[r] = i[r] || function () {
+        (i[r].q = i[r].q || []).push(arguments)
+      }, i[r].l = 1 * new Date();
+      a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0];
+      a.async = 1;
+      a.src = g;
+      m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+    ga('create', 'UA-115098269-3', 'auto'); // add your tracking ID here.
+    ga('send', 'pageview');
+
+    window.oncontextmenu = function () {
+      return false;
+    }
+    document.onkeydown = function (e) {
+      if (event.keyCode == 123) {
+        return
+        false;
+      }
+      if (e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)) {
+        return false;
+      }
+      if (e.ctrlKey && e.shiftKey &&
+        e.keyCode == 'J'.charCodeAt(0)) {
+        return false;
+      }
+      if (e.ctrlKey && e.keyCode == 'U'.charCodeAt(0)) {
+        return false;
+      }
+    }
+
+  </script>
+
 </body>
 
 </html>
